# murmur

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  PROJECT_STATUS.md  index.html  login.html  onboarding.html  overlay.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: REMEDIATION_PLAN.md
proxy/: package-lock.json  package.json  wrangler.toml
proxy/src/: index.ts
src/: index.tsx  login.tsx  main.ts  onboarding.ts  onboarding.tsx  overlay.tsx  sentry.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  claude.rs  config.rs  deepgram.rs  error.rs  groq_llm.rs  http_client.rs  lib.rs  licensing.rs  main.rs  model_manager.rs  permissions.rs  rate_limit.rs  secure_storage.rs  signing.rs  state.rs  transcription.rs  whisper_api.rs  whisper_local.rs
src-tauri/src/auth/: keychain.rs  mod.rs  pkce.rs  storage.rs  types.rs  workos.rs
src-tauri/src/ide/: cli_syntax.rs  dictionary.rs  file_index.rs  file_tagger.rs  mod.rs  variable.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: mod.rs  selection.rs
src-tauri/src/platform/macos/: mod.rs  selection.rs
src-tauri/src/styles/: builtin.rs  detection.rs  mapping.rs  mod.rs
src/components/login/: LoginWindow.tsx
src/components/onboarding/: MicrophoneSelector.tsx  OnboardingWindow.tsx  PermissionCard.tsx  StepIndicator.tsx  SuccessScreen.tsx  index.ts
src/components/overlay/: OverlayPill.tsx  OverlayWindow.tsx  RecordingDot.tsx  Timer.tsx  Waveform.tsx  index.ts
src/components/preferences/: ApiTab.tsx  AudioTab.tsx  GeneralTab.tsx  LicenseSection.tsx  ModelSection.tsx  PreferencesWindow.tsx  ProviderCard.tsx  StickyActionBar.tsx  TranscriptionTab.tsx  index.ts
src/components/shared/: LanguageChips.tsx  LanguageGrid.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  index.ts  input.tsx  progress.tsx  radio-group.tsx  select.tsx  switch.tsx  tabs.tsx
src/hooks/: index.ts  useAudioLevel.ts  useGsapAnimations.ts  useLicenseInfo.ts  useModelStatus.ts  usePermissions.ts  usePreferences.ts  useRecordingState.test.ts  useRecordingState.ts  useTimer.test.ts  useTimer.ts
src/lib/: tauri.ts  utils.test.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: auth.ts  index.ts  license.ts  model.ts  permissions.ts  preferences.ts  recording.test.ts  recording.ts
