[package]
name = "murmur"
version = "0.1.0"
description = "Voice to text, effortlessly"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
dotenv = "0.15"
dirs = "5"

# Whisper transcription
whisper-rs = "0.13"      # Local Whisper (whisper.cpp bindings)
rubato = "0.15"          # Audio resampling 48kHz→16kHz

# Async utilities for model downloads
futures-util = "0.3"

# Utilities
num_cpus = "1.16"        # CPU count for thread optimization
chrono = "0.4"           # Date/time for license caching
any_ascii = "0.3"        # Unicode to ASCII transliteration for romanized output

