[package]
name = "murmur"
version = "0.1.0"
description = "Voice to text, effortlessly"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "native-tls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
dotenv = "0.15"
dirs = "5"

# Audio processing
rubato = "0.16.2"        # Audio resampling 48kHz→16kHz

# Utilities
any_ascii = "0.3"        # Unicode to ASCII transliteration for romanized output

# Security - HMAC signing for proxy authentication
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

# Command Mode - macOS Accessibility API
get-selected-text = "0.1"  # Get selected text from any app via Accessibility API
regex = "1"                # Pattern matching for selection validation

# IDE Integrations (Phase 3)
walkdir = "2"              # Recursive file walking for workspace indexing
ignore = "0.4"             # Respects .gitignore when walking files
fuzzy-matcher = "0.3"      # Fuzzy string matching for file tagging

[dev-dependencies]
tempfile = "3"             # Temporary directories for testing

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

